Fix alignments

--- a/index.css
+++ b/index.css
@@ -110,7 +110,7 @@ a {
 }
 @media screen and (min-width: 601px) {
   .hdr {
-    font-size: 35px;
+    font-size: 30px;
   }
 }
 @media screen and (max-width: 600px) {
